--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,3 +1,6 @@
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
+
 @import "tailwindcss";
 
 /* globals.css */
@@ -23,153 +26,4 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-}
-
-/* globals.css */
-body {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400; /* Default vægt */
-  background-color: #b6ccda;
-}
-
-/* Ekstra hjælpestilarter */
-h1,
-h2,
-h3 {
-  font-weight: 700;
-  color: #ffffff;
-}
-
-p {
-  color: #ffffff;
-}
-
-.light-text {
-  font-weight: 300;
-}
-.wrapper {
-  display: grid;
-  grid-template-rows: auto auto;
-  gap: 2rem;
-  margin-left: 5%;
-  max-width: 1400px;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 12rem;
-}
-
-.watchImage {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 5%;
-}
-
-.watchImage img {
-  max-width: 100%;
-  height: auto;
-}
-
-.colorSelector {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 2;
-}
-
-.textArea {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 10%;
-}
-
-.title {
-  font-size: 5.5rem;
-  font-weight: bold;
-  line-height: 1.1;
-  margin-bottom: 2rem;
-}
-
-.subtitle {
-  font-size: 5.25rem;
-  line-height: 1.1;
-  margin-bottom: 2rem;
-}
-
-.ctaButton {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 300px;
-  height: 60px;
-  border: 2px solid #ffffff;
-  border-radius: 50px;
-  background: transparent;
-  color: #ffffff;
-  font-size: 1.5rem;
-  letter-spacing: 1px;
-  margin-top: 10%;
-  transition: all 0.3s ease;
-}
-
-.ctaButton:hover {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.thumbnailSelector {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 13%;
-  margin-top: 2rem;
-  z-index: 4;
-}
-
-.arrowNavigation {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  margin: 2rem 0 0 0.5%;
-  position: relative;
-  z-index: 5;
-}
-
-.navArrow {
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 2rem;
-  transition: transform 0.2s ease;
-  padding: 10px;
-}
-
-.navArrow:hover:not(.disabled) {
-  transform: scale(1.2);
-}
-
-.disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-  pointer-events: none;
-}
-
-.stepIndicator {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  font-size: 1.2rem;
-}
-
-.numberIcon {
-  font-size: 1.5rem;
-  color: #ffffff;
 }
